<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/take_gif_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/take_gif" />

    <Button
        android:id="@+id/settings_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/edit_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/kuroba_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kuroba" />
</LinearLayout>
